hphp/test/zend/bad/ext-simplexml/bug37076_1.php
<?php
$xml = simplexml_load_string("<root><foo /></root>");
$xml->{""} .= "bar";
print $xml->asXML();
?>
===DONE===